[package]
name = "guessing_game"
version = "0.1.0"
authors = ["707 <707472783@qq.com>"]
edition = "2018"

[dependencies]
rand = "^0.4.0"  # 添加随机数依赖，^表示兼容0.4.0版本的都可以；他依赖libc库，所以还会自动下载libc。

# 执行cargo build的时候，只会编译有改动的部分，依赖或者代码没有改动就不会重新编译。
# 在第一次编译的时候会生成Cargo.lock文件，会记录依赖的版本，再次编译时会直接从lock文件中取依赖的版本。
# 执行cargo update会找0.4.x的最新版本，有新版则会修改lock文件，但是不会获取0.5.x或其他版本。